--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
   "license": "MIT",
   "schematics": "./src/collection.json",
   "dependencies": {
-    "@angular-devkit/core": "^11.2.10",
     "@angular-devkit/schematics": "^11.2.10",
+    "@schematics/angular": "^11.2.10",
     "typescript": "~4.1.2"
   },
   "devDependencies": {
-    "@types/node": "^12.11.1",
+    "@angular-devkit/core": "^11.2.10",
     "@types/jasmine": "~3.5.0",
+    "@types/node": "^12.11.1",
     "jasmine": "^3.5.0"
   }
 }
