css instead of scss

--- a/src/component/files/component/__name@dasherize__/__name@dasherize__.component.ts.template
+++ b/src/component/files/component/__name@dasherize__/__name@dasherize__.component.ts.template
@@ -3,7 +3,7 @@ import { Component } from '@angular/core';
 @Component({
     selector: 'app-<%= dasherize(name) %>',
     templateUrl: './<%= dasherize(name) %>.component.html',
-    styleUrls: ['./<%= dasherize(name) %>.component.scss']
+    styleUrls: ['./<%= dasherize(name) %>.component.css']
 })
 export class <%= classify(name) %>Component {
 
