--- a/src/component/files/component/__name@dasherize__/view/__name@dasherize__-view.component.ts.template
+++ b/src/component/files/component/__name@dasherize__/view/__name@dasherize__-view.component.ts.template
@@ -3,7 +3,7 @@ import { Component } from '@angular/core';
 @Component({
     selector: 'app-<%= dasherize(name) %>-view',
     templateUrl: './<%= dasherize(name) %>-view.component.html',
-    styleUrls: ['./<%= dasherize(name) %>-view.component.scss']
+    styleUrls: ['./<%= dasherize(name) %>-view.component.css']
 })
 export class <%= classify(name) %>ViewComponent {
 
